[package]
name = "web_server"
version = "0.0.1"
authors = ["Aleksei Konovkin <alkon2000@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
percent-encoding = "2.1"
lazy_static = "1.4"
regex = "1.3"
yaml-rust = "0.4.5"
rlua = "0.17.0"
pyo3 = "0.13.2"
rand = "0.8.3"
net2 = "0.2.37"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.19"
unicase = "2.6.0"
# zookeeper = "0.5.9"

[dependencies.mio]
version = "0.7.0"
default-features = false
features = ["os-poll", "tcp", "udp" ]

